# PantherLang

./: .gitignore  AGENTS.md  AI_CONTEXT.md  BATCH_A_MANIFEST.json  BATCH_B_MANIFEST.json  BATCH_C2_MANIFEST.json  BATCH_C4_MANIFEST.json  BATCH_C_MANIFEST.json  BATCH_E_MANIFEST.json  BATCH_F1_MANIFEST.json  BATCH_F2B_MANIFEST.json  BATCH_F2_MANIFEST.json  CHANGELOG.md  FINAL_RELEASE_SUMMARY_FOR_FERAS.md  INSTALLATION_GUIDE_LINUX_WINDOWS.md  LANGUAGE_FEATURE_MATRIX.md  LANGUAGE_RULES.md  LICENSE  LLM_REFERENCE.md  MANIFEST.in  MASTER_PROMPT.md  PANTHERLANG_MASTER_PROMPT_AIDER_OLLAMA_V1.md  PANTHERLANG_REPOSITORY_AUDIT.md  PANTHERLANG_ZBORA_ZB_PLAN.md  PANTHER_ACADEMY_LAUNCH_PLAN.md  PANTHER_PROMPT.md  PROJECT_OVERVIEW.md  PUBLIC_LAUNCH_CHECKLIST.md  PUBLIC_REPOSITORY_CLEANUP_REPORT.md  README.md  README_ACADEMY_LESSONS01_05_STDLIB_RUNTIME_FIX.md  README_COMPARISON_RUNTIME_FIX1.md  README_PANTHER_V1_1_5_RC1A_SYNTAX_REPAIR.md  README_PANTHER_V1_1_5_RC1B_COMPARISON_EQUALITY.md  README_PANTHER_V1_1_5_RC1C_COMPARISON_FINAL_FIX.md  README_PANTHER_V1_1_5_RC1_COMPARISON_RUNTIME.md  README_PHASE2_BATCH2_1_PART1.txt  README_PHASE2_BATCH2_1_PART2.md  README_PHASE2_BATCH2_1_PART3.md  README_PHASE2_BATCH2_2_PART1.md  (+247 more)
.panther_cache/: incremental_demo.json
TestApp/: panther.toml
architecture/: AI_NATIVE_CORE.md  AI_OPTIMIZING_COMPILER.md  AI_PACKAGE_ECOSYSTEM.md  CONTROL_FLOW_ENGINE.md  DISTRIBUTED_EXECUTION.md  EXPRESSIONS_ENGINE.md  FAST_REGRESSION_ENGINE.md  FINAL_COMPILER_INTEGRATION.md  FUNCTIONS_ENGINE.md  INTELLIGENT_TYPE_SYSTEM.md  LOOPS_ENGINE.md  MEMORY_CONTEXT_ENGINE.md  MODULES_ENGINE.md  MULTI_AGENT_RUNTIME.md  NATURAL_LANGUAGE_PROGRAMMING.md  README.md  RUNTIME_BRIDGE_BUILD_RUN.md  SECURE_AI_SANDBOX.md  STANDARD_LIBRARY_FOUNDATION.md  STRUCTS_ENGINE.md
benchmarks/: panther_benchmark.py
build_system/: build_manifest.py
cli/: panther_cli.py  panther_cli_v2.py
compiler/: capability_manifest.py
debug_adapter/: __init__.py  evaluate.py  execution_dispatcher.py  protocol.py  request_dispatcher.py  response_dispatcher.py  server.py  stack_frames.py  threads.py  variables.py  watch_expressions.py
debug_adapter_bridge/: __init__.py  launcher.py  server.py  threads.py
debug_adapter_legacy_P3_20260629_111133/: state_machine.py
debug_adapter_rebuilt/: launcher.py
diary_entries/: 2026-01-15.txt  2026-01-16.txt  2026-01-17.txt
distribution/: distribution_manifest.json
docs/: ARCHITECTURE.md  CLI.md  CLI_GUIDE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_GENERATOR.md  FORMATTER.md  KALI_TEST_COMMANDS.md  LANGUAGE_REFERENCE.md  MACOS_TEST_COMMANDS.md  PACKAGE_MANAGER.md  PANTHERLANG_SOURCE_FILES_INDEX.md  (+18 more)
tools/panther-lsp/: pyproject.toml
tools/panther-lsp/panther_lsp/: __init__.py  analyzer.py  protocol.py  server.py
tools/panther-lsp/tests/: test_lsp_core.py
(+2096 files in other folders)
